fixed overflow issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -59,8 +59,6 @@ main {
     display: grid;
     grid-template-columns: 1fr 340px;
     grid-template-rows: 5rem 1fr;
-    width: 100vw;
-    height: 100vh;
 }
 
 h1 {
@@ -93,7 +91,7 @@ h3:nth-of-type(3) {
 }
 
 .hide {
-    /* display: none; */
+    display: none;
 }
 
 #controlPanel {
